# flowtigs-with-simulated-data

./: .gitignore  Cargo.toml  LICENSE  README.md  output.txt
data/: ecoli_k12.edgelist  fake.edgelist  long_k27.edgelist  long_reference.fasta  reference.fasta  referenceEcoli.fasta  reference_k15.edgelist  short_k13.edgelist  short_reference.fasta  simple_reference.fasta  test_k12.edgelist  test_reference.fasta
data/test_data/: longer_k4.edgelist  maximal_k3.edgelist  outflow.edgelist  outflow_k2.edgelist  short.edgelist  sufpref.edgelist  two_cycles_k5.edgelist
flow_decomposition/: Cargo.toml  pathtest.txt
flow_decomposition/src/: ac_trie.rs  cycle.rs  edge.rs  flow.rs  graph.rs  main.rs  uniqueness.rs
src/: cycle.rs  edge.rs  flow.rs  graph.rs  main.rs  memory_meter.rs  safe_paths.rs  test.rs  uniqueness.rs
