[package]
name = "flow_decomposition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env = '0.0.0'
fs = '0.0.5'
aho-corasick = '0.7'
log = '0.4.19'
simple_logger = '2.0.0'
clap = { version = "4.2.5", features = ["derive"] }
simplelog = "0.12.1"
self-meter = "0.6.0"
