[package]
name = "flowtigs"
version = "1.0.1"
edition = "2021"
description = "An algorithm for calculating flowtigs in a De Bruijn graph of DNA reads in metagenomes."
repository = "https://github.com/elieling/flowtigs"
license = "BSD-2-Clause"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = '0.0.5'
aho-corasick = '0.7'
log = '0.4.19'
simple_logger = '2.0.0'
clap = { version = "4.2.5", features = ["derive"] }
simplelog = "0.12.1"
self-meter = "0.6.0"
